--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-swiper": "^1.6.0-rc.3",
     "react-native-tcp-socket": "^3.2.3"
   },
   "devDependencies": {
